# GenerateMusic

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.agents/: config.json
.agents/skills/frontend-design/: SKILL.md
backend/: config.yaml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py  websocket.py
backend/app/api/endpoints/: audio.py  covers.py  generate.py  history.py  lyrics.py  marketplace.py  providers.py  tasks.py
backend/app/core/: config.py  settings.py
backend/app/db/: session.py
backend/app/models/: database.py
backend/app/providers/llm/: base.py
backend/app/providers/manager/: __init__.py  base.py  llm.py  music.py
backend/app/providers/music/: base.py  huggingface.py  utils.py
backend/app/providers/music/acestep/: __init__.py  custom.py  official.py
backend/app/repositories/: generation.py
backend/app/schemas/: generation.py  marketplace.py  provider.py
backend/app/services/: config_service.py  llm_service.py  model_marketplace.py  music_generation.py  storage.py
backend/app/utils/: lrc.py
desktop/: index.html  package.json
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/components/: ConfirmDialog.tsx  CustomSelect.tsx  LyricsPanel.tsx  Player.tsx  Sidebar.tsx
desktop/src/components/create/: ExtendRemixForms.tsx  GenerationProgress.tsx  GenerationResult.tsx  TagSelector.tsx
desktop/src/components/detail/: DetailLyricsPanel.tsx  MetadataCard.tsx
desktop/src/components/providers/: MarketplaceSection.tsx  ProviderFormModal.tsx  SectionHeader.tsx
desktop/src/constants/: musicOptions.ts  providerOptions.ts  templates.ts
desktop/src/hooks/: useTaskPolling.ts  useTrackActions.ts
desktop/src/i18n/: index.ts
desktop/src/i18n/locales/: en.json  zh-CN.json
desktop/src/pages/: CreatePage.tsx  LibraryPage.tsx  ProvidersPage.tsx  SettingsPage.tsx  SongDetailPage.tsx  WealthHomePage.tsx
desktop/src/pages/providers/: LLMTab.tsx  MusicTab.tsx
desktop/src/services/: api.ts
desktop/src/stores/: appStore.ts  createStore.ts  libraryStore.ts  playerStore.ts  providerStore.ts  settingsStore.ts
desktop/src/types/: index.ts
desktop/src/utils/: format.ts  lyrics.ts
tests/music/: test_generate_chinese.py  test_generate_english.py
