[package]
name = "generate-music-desktop"
version = "0.1.0"
description = "GenerateMusic - AI Music Generation"
authors = ["GenerateMusic"]
edition = "2021"

[lib]
name = "generate_music_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "generate-music-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
